# compute-pi

./: .bashrc  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  compute.slurm  config.sh  generate_csv.py  hpc.def  hpc_local.def  mpitest.def  perftest.sh  pi.def  reduce.slurm  run.sh  setup.sh
src/: allocate.c  allocate.h  benchmark.cpp  benchmark.hpp  chudnovsky.c  chudnovsky.h  chudnovsky_bs.c  chudnovsky_bs.h  gmp_extended.c  gmp_extended.h  main.c  main.cpp  main_bs.cpp  mpitest.c  reducer.cpp  reducer_mpi.cpp  reducer_omp.cpp  s_chudnovsky.cpp
